--- a/VolumeKeeper/App.xaml
+++ b/VolumeKeeper/App.xaml
@@ -1,9 +1,12 @@
 ﻿<Application x:Class="VolumeKeeper.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:VolumeKeeper"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="using:VolumeKeeper">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
