--- a/VolumeKeeper/LogsPage.xaml
+++ b/VolumeKeeper/LogsPage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="VolumeKeeper.LogsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:VolumeKeeper">
+      xmlns:local="using:VolumeKeeper"
+      xmlns:services="using:VolumeKeeper.Services">
 
     <Grid Padding="24,12,24,24">
         <Grid.RowDefinitions>
@@ -44,7 +45,7 @@
                       VerticalScrollBarVisibility="Auto">
             <ItemsRepeater x:Name="LogsRepeater" ItemsSource="{x:Bind LogEntries}">
                 <ItemsRepeater.ItemTemplate>
-                    <DataTemplate x:DataType="local:LogEntry">
+                    <DataTemplate x:DataType="services:LogEntry">
                         <Border BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                                 BorderThickness="0,0,0,1"
                                 Padding="16,12">
@@ -57,7 +58,7 @@
 
                                 <!-- Timestamp -->
                                 <TextBlock Grid.Column="0" 
-                                           Text="{x:Bind Timestamp}" 
+                                           Text="{x:Bind FormattedTime}" 
                                            Style="{ThemeResource CaptionTextBlockStyle}"
                                            Opacity="0.6"
                                            VerticalAlignment="Center"/>
