Fix some issues with the toggle configs

--- a/VolumeKeeper/LogsPage.xaml
+++ b/VolumeKeeper/LogsPage.xaml
@@ -36,7 +36,8 @@
       <ToggleSwitch x:Name="AutoScrollToggle"
                     Header="Auto-scroll"
                     IsOn="True"
-                    Margin="16,0,0,0" />
+                    Margin="16,0,0,0"
+                    Toggled="AutoScrollToggle_Toggled" />
     </StackPanel>
 
     <!-- Log List -->
