--- a/VolumeKeeper/HomePage.xaml
+++ b/VolumeKeeper/HomePage.xaml
@@ -21,26 +21,43 @@
     </StackPanel>
 
     <!-- Controls Section -->
-    <StackPanel Grid.Row="1"
-                Orientation="Horizontal"
-                Spacing="12"
-                Margin="0,0,0,16">
-      <Button x:Name="RefreshButton" Click="RefreshButton_Click">
-        <StackPanel Orientation="Horizontal" Spacing="8">
-          <SymbolIcon Symbol="Refresh" />
-          <TextBlock Text="Refresh" />
-        </StackPanel>
-      </Button>
+    <Grid Grid.Row="1" Margin="0,0,0,16">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
 
-      <Button x:Name="ClearAllButton"
-              Click="ClearAllButton_Click"
-              Style="{ThemeResource AccentButtonStyle}">
-        <StackPanel Orientation="Horizontal" Spacing="8">
-          <SymbolIcon Symbol="Clear" />
-          <TextBlock Text="Clear All" />
-        </StackPanel>
-      </Button>
-    </StackPanel>
+      <StackPanel Grid.Column="0"
+                  Orientation="Horizontal"
+                  Spacing="12">
+        <Button x:Name="RefreshButton" Click="RefreshButton_Click">
+          <StackPanel Orientation="Horizontal" Spacing="8">
+            <SymbolIcon Symbol="Refresh" />
+            <TextBlock Text="Refresh" />
+          </StackPanel>
+        </Button>
+
+        <Button x:Name="ClearAllButton"
+                Click="ClearAllButton_Click"
+                Style="{ThemeResource AccentButtonStyle}">
+          <StackPanel Orientation="Horizontal" Spacing="8">
+            <SymbolIcon Symbol="Clear" />
+            <TextBlock Text="Clear All" />
+          </StackPanel>
+        </Button>
+      </StackPanel>
+
+      <StackPanel Grid.Column="1"
+                  Orientation="Horizontal"
+                  HorizontalAlignment="Right"
+                  Spacing="8">
+        <TextBlock Text="Auto-restore volumes:"
+                   VerticalAlignment="Center" />
+        <ToggleSwitch x:Name="AutoRestoreToggle"
+                      IsOn="True"
+                      Toggled="AutoRestoreToggle_Toggled" />
+      </StackPanel>
+    </Grid>
 
     <!-- Application List -->
     <ListView x:Name="ApplicationListView"
@@ -111,7 +128,13 @@
                           Orientation="Horizontal"
                           Spacing="8"
                           VerticalAlignment="Center">
-                <SymbolIcon Symbol="Volume" />
+                <Button Click="MuteToggle_Click"
+                        CommandParameter="{x:Bind}"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        Padding="4">
+                  <SymbolIcon Symbol="{x:Bind VolumeIcon, Mode=OneWay}" />
+                </Button>
                 <Slider Value="{x:Bind Volume, Mode=TwoWay}"
                         Minimum="0"
                         Maximum="100"
