--- a/VolumeKeeper/LogsPage.xaml
+++ b/VolumeKeeper/LogsPage.xaml
@@ -2,7 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:VolumeKeeper"
-      xmlns:services="using:VolumeKeeper.Services">
+      xmlns:models="using:VolumeKeeper.Models">
 
   <Grid Padding="24,12,24,24">
     <Grid.RowDefinitions>
@@ -45,7 +45,7 @@
                   VerticalScrollBarVisibility="Auto">
       <ItemsRepeater x:Name="LogsRepeater" ItemsSource="{x:Bind LogEntries}">
         <ItemsRepeater.ItemTemplate>
-          <DataTemplate x:DataType="services:LogEntry">
+          <DataTemplate x:DataType="models:Log.LogEntry">
             <Border BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                     BorderThickness="0,0,0,1"
                     Padding="16,12">
