--- a/VolumeKeeper/HomePage.xaml
+++ b/VolumeKeeper/HomePage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="VolumeKeeper.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:VolumeKeeper">
+      xmlns:local="using:VolumeKeeper"
+      xmlns:ui="using:VolumeKeeper.Models.UI">
 
   <Grid Padding="24,12,24,24">
     <Grid.RowDefinitions>
@@ -64,7 +65,7 @@
               SelectionMode="None"
               ItemsSource="{x:Bind Applications}">
       <ListView.ItemTemplate>
-        <DataTemplate x:DataType="local:ApplicationVolume">
+        <DataTemplate x:DataType="ui:ApplicationVolume">
           <Border BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                   BorderThickness="1"
                   CornerRadius="8"
