--- a/VolumeKeeper/HomePage.xaml
+++ b/VolumeKeeper/HomePage.xaml
@@ -178,7 +178,7 @@
                 Grid.Row="2"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center"
-                Spacing="16"
+                Spacing="45"
                 Visibility="Collapsed">
       <SymbolIcon Symbol="Audio"
                   RenderTransformOrigin="0.5,0.5">
@@ -186,16 +186,22 @@
           <CompositeTransform ScaleX="4" ScaleY="4" />
         </SymbolIcon.RenderTransform>
       </SymbolIcon>
-      <TextBlock Text="No applications detected"
-                 Style="{ThemeResource SubtitleTextBlockStyle}"
-                 Opacity="0.6"
-                 HorizontalAlignment="Center" />
-      <TextBlock Text="Launch applications and adjust their volume to get started"
-                 Style="{ThemeResource CaptionTextBlockStyle}"
-                 Opacity="0.4"
-                 HorizontalAlignment="Center"
-                 TextWrapping="Wrap"
-                 TextAlignment="Center" />
+
+      <StackPanel VerticalAlignment="Center"
+                  HorizontalAlignment="Center"
+                  Spacing="8"
+                  Visibility="Visible">
+        <TextBlock Text="No applications detected"
+                   Style="{ThemeResource SubtitleTextBlockStyle}"
+                   Opacity="0.6"
+                   HorizontalAlignment="Center" />
+        <TextBlock Text="Launch applications and adjust their volume to get started"
+                   Style="{ThemeResource CaptionTextBlockStyle}"
+                   Opacity="0.4"
+                   HorizontalAlignment="Center"
+                   TextWrapping="Wrap"
+                   TextAlignment="Center" />
+      </StackPanel>
     </StackPanel>
   </Grid>
 </Page>
