--- a/VolumeKeeper/HomePage.xaml
+++ b/VolumeKeeper/HomePage.xaml
@@ -1,7 +1,8 @@
 ﻿<Page x:Class="VolumeKeeper.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:VolumeKeeper">
+      xmlns:local="using:VolumeKeeper"
+      xmlns:ui="using:VolumeKeeper.Models.UI">
 
   <Grid Padding="24,12,24,24">
     <Grid.RowDefinitions>
@@ -36,15 +37,6 @@
             <TextBlock Text="Refresh" />
           </StackPanel>
         </Button>
-
-        <Button x:Name="ClearAllButton"
-                Click="ClearAllButton_Click"
-                Style="{ThemeResource AccentButtonStyle}">
-          <StackPanel Orientation="Horizontal" Spacing="8">
-            <SymbolIcon Symbol="Clear" />
-            <TextBlock Text="Clear All" />
-          </StackPanel>
-        </Button>
       </StackPanel>
 
       <StackPanel Grid.Column="1"
@@ -64,7 +56,7 @@
               SelectionMode="None"
               ItemsSource="{x:Bind Applications}">
       <ListView.ItemTemplate>
-        <DataTemplate x:DataType="local:ApplicationVolume">
+        <DataTemplate x:DataType="ui:ApplicationVolume">
           <Border BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                   BorderThickness="1"
                   CornerRadius="8"
@@ -186,7 +178,7 @@
                 Grid.Row="2"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center"
-                Spacing="16"
+                Spacing="45"
                 Visibility="Collapsed">
       <SymbolIcon Symbol="Audio"
                   RenderTransformOrigin="0.5,0.5">
@@ -194,16 +186,22 @@
           <CompositeTransform ScaleX="4" ScaleY="4" />
         </SymbolIcon.RenderTransform>
       </SymbolIcon>
-      <TextBlock Text="No applications detected"
-                 Style="{ThemeResource SubtitleTextBlockStyle}"
-                 Opacity="0.6"
-                 HorizontalAlignment="Center" />
-      <TextBlock Text="Launch applications and adjust their volume to get started"
-                 Style="{ThemeResource CaptionTextBlockStyle}"
-                 Opacity="0.4"
-                 HorizontalAlignment="Center"
-                 TextWrapping="Wrap"
-                 TextAlignment="Center" />
+
+      <StackPanel VerticalAlignment="Center"
+                  HorizontalAlignment="Center"
+                  Spacing="8"
+                  Visibility="Visible">
+        <TextBlock Text="No applications detected"
+                   Style="{ThemeResource SubtitleTextBlockStyle}"
+                   Opacity="0.6"
+                   HorizontalAlignment="Center" />
+        <TextBlock Text="Launch applications and adjust their volume to get started"
+                   Style="{ThemeResource CaptionTextBlockStyle}"
+                   Opacity="0.4"
+                   HorizontalAlignment="Center"
+                   TextWrapping="Wrap"
+                   TextAlignment="Center" />
+      </StackPanel>
     </StackPanel>
   </Grid>
 </Page>
