--- a/VolumeKeeper/HomePage.xaml
+++ b/VolumeKeeper/HomePage.xaml
@@ -2,7 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:VolumeKeeper"
-      xmlns:ui="using:VolumeKeeper.Models.UI">
+      xmlns:models="using:VolumeKeeper.Models">
 
   <Grid Padding="24,12,24,24">
     <Grid.RowDefinitions>
@@ -26,6 +26,7 @@
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="Auto" />
         <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="Auto" />
       </Grid.ColumnDefinitions>
 
       <StackPanel Grid.Column="0"
@@ -39,9 +40,8 @@
         </Button>
       </StackPanel>
 
-      <StackPanel Grid.Column="1"
+      <StackPanel Grid.Column="2"
                   Orientation="Horizontal"
-                  HorizontalAlignment="Right"
                   Spacing="8">
         <TextBlock Text="Auto-restore volumes:"
                    VerticalAlignment="Center" />
@@ -56,7 +56,7 @@
               SelectionMode="None"
               ItemsSource="{x:Bind Applications}">
       <ListView.ItemTemplate>
-        <DataTemplate x:DataType="ui:ApplicationVolume">
+        <DataTemplate x:DataType="models:ObservableAudioSession">
           <Border BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                   BorderThickness="1"
                   CornerRadius="8"
@@ -93,7 +93,7 @@
 
               <!-- App Name and Status -->
               <StackPanel Grid.Column="1" VerticalAlignment="Center">
-                <TextBlock Text="{x:Bind ApplicationName}"
+                <TextBlock Text="{x:Bind ProcessDisplayName}"
                            Style="{ThemeResource BodyStrongTextBlockStyle}"
                            Margin="0,0,0,2" />
                 <StackPanel Orientation="Horizontal" Spacing="4">
@@ -148,7 +148,7 @@
                         Padding="4">
                   <SymbolIcon Symbol="{x:Bind VolumeIcon, Mode=OneWay}" />
                 </Button>
-                <Slider Value="{x:Bind Volume, Mode=TwoWay}"
+                <Slider Value="{x:Bind Volume, Mode=OneWay}"
                         Minimum="0"
                         Maximum="100"
                         Width="120"
