--- a/VolumeKeeper/HomePage.xaml
+++ b/VolumeKeeper/HomePage.xaml
@@ -148,7 +148,7 @@
                         Padding="4">
                   <SymbolIcon Symbol="{x:Bind VolumeIcon, Mode=OneWay}" />
                 </Button>
-                <Slider Value="{x:Bind Volume, Mode=OneWay}"
+                <Slider Value="{x:Bind Volume, Mode=TwoWay}"
                         Minimum="0"
                         Maximum="100"
                         Width="120"
