--- a/VolumeKeeper/LogsPage.xaml
+++ b/VolumeKeeper/LogsPage.xaml
@@ -2,7 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:VolumeKeeper"
-      xmlns:models="using:VolumeKeeper.Models">
+      xmlns:models="using:VolumeKeeper.Models"
+      xmlns:controls="using:VolumeKeeper.Controls">
 
   <Grid Padding="24,12,24,24">
     <Grid.RowDefinitions>
@@ -33,10 +34,10 @@
         </StackPanel>
       </Button>
 
-      <ToggleSwitch x:Name="AutoScrollToggle"
-                    Header="Auto-scroll"
-                    Margin="16,0,0,0"
-                    Toggled="AutoScrollToggle_Toggled" />
+      <controls:CompactToggleSwitch x:Name="AutoScrollToggle"
+                                    Header="Auto-scroll"
+                                    Margin="16,0,0,0"
+                                    Toggled="AutoScrollToggle_Toggled" />
     </StackPanel>
 
     <!-- Log List -->
